--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <body>
     <%- include ("partials/navbar.ejs"); %>
     <div class="container">
-        <hr>
+        <br>
         <h1>Perguntas</h1>        
         <hr>
         <a href="/perguntar" class="btn btn-success">Perguntar</a>
@@ -21,4 +21,9 @@
         <% }) %>
     </div>
 </body>
+<footer class="fixarRodape">
+    <div class="container-footer">
+         <p>Developed By <a href="https://www.linkedin.com/in/gabriel-fiamete-da-rosa-31199b161" class="container-footer">Gabriel Fiamete da Rosa</a></p>
+    </div>
+</footer>
 <%- include ("partials/footer.ejs"); %>
