--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -11,6 +11,9 @@
                     <label for="">Título</label>
                     <input  type="text" name="titulo" placeholder="Título" id="" class="form-control">
                     <br>
+                    <label for="">Nome da Empresa:</label>
+                    <input  type="text" name="empresa" placeholder="Nome da Empresa" id="" class="form-control" required>
+                    <br>
                     <label for="">Descirção</label>
                     <textarea name="descricao" id="" placeholder="Descreva sua pergunta aqui!" cols="30" rows="10" class="form-control"></textarea>
                     <br>
