--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,9 @@
-<nav class="navbar navbar-light bg-dark">
-    <a href="/" class="navbar-brand">
-        <h1 style="color:white;">FAQ - Rech Center</h1>
-    </a>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+       <a class="navbar-brand" href="#">FAQ -Rech Center</a>
+       <a class="btn btn-primary" href="#">Docs.</a>
+  </div>
+  <div class="container-fluid">
+    <a class="btn btn-primary" href="http://10.1.1.235" target="blank">Acessar área de arquivos</a>/
+  </div>
 </nav>
