--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-       <a class="navbar-brand" href="#">FAQ -Rech Center</a>
-       <a class="btn btn-primary" href="#">Docs.</a>
-  </div>
-  <div class="container-fluid">
-    <a class="btn btn-primary" href="http://10.1.1.235" target="blank">Acessar área de arquivos</a>/
-  </div>
-</nav>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#">FAQ - Rech Center</a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Docs.</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://10.1.1.235" target="blank">Acessar área de arquivos</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
