--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,16 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">FAQ - Rech Center</a>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Docs.</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://10.1.1.235" target="blank">Acessar área de arquivos</a>
-        </li>
-      </ul>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="http://10.1.1.235" target="blank">Acessar área de arquivos</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-primary" href="#">Docs.</a>
+          </li> 
+      </div>
     </div>
   </nav>
